@@ -1,6 +1,5 @@
 package com.kodality.termx.terminology.valueset.concept;
 
-import com.kodality.termx.terminology.codesystem.designation.DesignationService;
 import com.kodality.termx.terminology.codesystem.entity.CodeSystemEntityVersionService;
 import com.kodality.termx.terminology.valueset.ValueSetVersionRepository;
 import com.kodality.termx.terminology.valueset.ruleset.ValueSetVersionRuleSetService;
@@ -9,18 +8,19 @@ import com.kodality.termx.ts.PublicationStatus;
 import com.kodality.termx.ts.ValueSetExternalExpandProvider;
 import com.kodality.termx.ts.codesystem.CodeSystemEntityVersion;
 import com.kodality.termx.ts.codesystem.CodeSystemEntityVersionQueryParams;
+import com.kodality.termx.ts.codesystem.CodeSystemVersionReference;
 import com.kodality.termx.ts.codesystem.Designation;
-import com.kodality.termx.ts.codesystem.DesignationQueryParams;
 import com.kodality.termx.ts.valueset.ValueSetVersion;
 import com.kodality.termx.ts.valueset.ValueSetVersionConcept;
 import com.kodality.termx.ts.valueset.ValueSetVersionRuleSet;
 import io.micronaut.core.util.CollectionUtils;
+import io.micronaut.core.util.StringUtils;
 import java.util.ArrayList;
-import java.util.Comparator;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 import javax.inject.Singleton;
 import lombok.RequiredArgsConstructor;
 import org.springframework.transaction.annotation.Transactional;
@@ -28,45 +28,48 @@ import org.springframework.transaction.annotation.Transactional;
 @Singleton
 @RequiredArgsConstructor
 public class ValueSetVersionConceptService {
-  private final DesignationService designationService;
   private final List<ValueSetExternalExpandProvider> externalExpandProviders;
   private final ValueSetVersionConceptRepository repository;
   private final ValueSetVersionRepository valueSetVersionRepository;
-  private final CodeSystemEntityVersionService codeSystemEntityVersionService;
   private final ValueSetVersionRuleSetService valueSetVersionRuleSetService;
   private final ValueSetSnapshotService valueSetSnapshotService;
+  private final CodeSystemEntityVersionService codeSystemEntityVersionService;
+
+  private static final String DISPLAY = "display";
 
   @Transactional
-  public List<ValueSetVersionConcept> expand(String valueSet, String valueSetVersion, ValueSetVersionRuleSet ruleSet) {
-    if (valueSet == null) {
-      return new ArrayList<>();
-    }
-    ValueSetVersion version = valueSetVersion == null ? valueSetVersionRepository.loadLastVersion(valueSet) : valueSetVersionRepository.load(valueSet, valueSetVersion);
+  public List<ValueSetVersionConcept> expand(String vs, String vsVersion) {
+    ValueSetVersion version = getVersion(vs, vsVersion);
     if (version == null) {
       return new ArrayList<>();
     }
-    List<ValueSetVersionConcept> expansion = expand(version.getId(), ruleSet);
-
-    if (version.getId() != null && ruleSet == null) {
-      valueSetSnapshotService.createSnapshot(valueSet, version.getId(), expansion);
-    }
+    List<ValueSetVersionConcept> expansion = expand(version, null);
+    valueSetSnapshotService.createSnapshot(vs, version.getId(), expansion);
     return expansion;
   }
 
-  public List<ValueSetVersionConcept> expand(Long versionId, ValueSetVersionRuleSet ruleSet) {
-    if (versionId == null) {
+  @Transactional
+  public List<ValueSetVersionConcept> expand(String vs, String vsVersion, String preferredLanguage) {
+    ValueSetVersion version = getVersion(vs, vsVersion);
+    if (version == null) {
       return new ArrayList<>();
     }
-    ValueSetVersion version = valueSetVersionRepository.load(versionId);
+    List<ValueSetVersionConcept> expansion = expand(version, preferredLanguage);
+    valueSetSnapshotService.createSnapshot(vs, version.getId(), expansion);
+    return expansion;
+  }
+
+  public List<ValueSetVersionConcept> expand(ValueSetVersion version, String preferredLanguage) {
+    if (version == null || version.getId() == null) {
+      return new ArrayList<>();
+    }
 
     if (PublicationStatus.active.equals(version.getStatus()) && version.getSnapshot() != null && version.getSnapshot().getExpansion() != null) {
       return version.getSnapshot().getExpansion();
     }
 
-    List<ValueSetVersionConcept> expansion = internalExpand(versionId, ruleSet);
-    if (ruleSet == null) {
-      ruleSet = valueSetVersionRuleSetService.load(versionId).orElse(null);
-    }
+    List<ValueSetVersionConcept> expansion = internalExpand(version, preferredLanguage);
+    ValueSetVersionRuleSet ruleSet = version.getRuleSet();
     for (ValueSetExternalExpandProvider provider : externalExpandProviders) {
       expansion.addAll(provider.expand(ruleSet, version));
       if (ruleSet != null) {
@@ -77,52 +80,64 @@ public class ValueSetVersionConceptService {
     return expansion;
   }
 
-  private List<ValueSetVersionConcept> internalExpand(Long versionId, ValueSetVersionRuleSet ruleSet) {
-    if (versionId == null) {
-      return new ArrayList<>();
-    }
-    if (ruleSet != null) {
-      return decorate(repository.expand(versionId, ruleSet));
-    }
-    return decorate(repository.expand(versionId));
+  private List<ValueSetVersionConcept> internalExpand(ValueSetVersion version, String preferredLanguage) {
+    return decorate(repository.expand(version.getId()), version, preferredLanguage);
   }
 
-  public List<ValueSetVersionConcept> decorate(List<ValueSetVersionConcept> concepts) {
-    List<String> designationIds = new ArrayList<>();
-    designationIds.addAll(concepts.stream().filter(c -> c.getDisplay() != null && c.getDisplay().getId() != null).map(c -> String.valueOf(c.getDisplay().getId())).toList());
-    designationIds.addAll(concepts.stream().filter(c -> CollectionUtils.isNotEmpty(c.getAdditionalDesignations())).flatMap(c -> c.getAdditionalDesignations().stream())
-        .filter(ad -> ad.getId() != null).map(ad -> String.valueOf(ad.getId())).toList());
-    DesignationQueryParams designationParams = new DesignationQueryParams();
-    designationParams.setId(String.join(",", designationIds));
-    designationParams.setLimit(designationIds.size());
-    List<Designation> designations = designationService.query(designationParams).getData();
+  public List<ValueSetVersionConcept> decorate(List<ValueSetVersionConcept> concepts, ValueSetVersion version, String preferredLanguage) {
+    List<String> supportedLanguages = Optional.ofNullable(version.getSupportedLanguages()).orElse(List.of());
 
-    List<CodeSystemEntityVersion> versions = new ArrayList<>();
-    concepts.stream().collect(Collectors.groupingBy(c -> c.getConcept().getCodeSystem())).forEach((cs, csConcepts) -> {
-      List<String> codes = csConcepts.stream().map(c -> c.getConcept().getCode()).filter(Objects::nonNull).toList();
-      CodeSystemEntityVersionQueryParams entityVersionParams = new CodeSystemEntityVersionQueryParams();
-      entityVersionParams.setCode(String.join(",", codes));
-      entityVersionParams.setCodeSystem(String.join(",", cs));
-      entityVersionParams.setStatus(String.join(",", List.of(PublicationStatus.active, PublicationStatus.draft)));
-      entityVersionParams.all();
-      versions.addAll(CollectionUtils.isEmpty(codes) ? List.of() : codeSystemEntityVersionService.query(entityVersionParams).getData());
-    });
+    Map<String, List<ValueSetVersionConcept>> groupedConcepts = concepts.stream().collect(Collectors.groupingBy(c -> c.getConcept().getCode()));
 
-    concepts.forEach(c -> {
-      List<CodeSystemEntityVersion> conceptVersions = versions.stream().filter(v -> v.getCode().equals(c.getConcept().getCode()) && v.getCodeSystem().equals(c.getConcept().getCodeSystem())).toList();
-      c.setActive(c.isActive() || conceptVersions.stream().anyMatch(v -> PublicationStatus.active.equals(v.getStatus())));
-      c.setDisplay(c.getDisplay() == null || c.getDisplay().getId() == null ? c.getDisplay() : designations.stream().filter(d -> d.getId().equals(c.getDisplay().getId())).findFirst().orElse(c.getDisplay()));
-      c.setAdditionalDesignations(CollectionUtils.isNotEmpty(c.getAdditionalDesignations()) ? c.getAdditionalDesignations().stream()
-          .map(ad -> ad.getId() == null ? ad : designations.stream().filter(d -> d.getId().equals(ad.getId())).findFirst().orElse(ad))
-          .collect(Collectors.toList()) : null);
+    List<String> versionIds =
+        concepts.stream().map(c -> c.getConcept().getConceptVersionId()).filter(Objects::nonNull).distinct().map(String::valueOf).toList();
+    CodeSystemEntityVersionQueryParams params = new CodeSystemEntityVersionQueryParams();
+    params.setIds(String.join(",", versionIds));
+    params.limit(versionIds.size());
+    List<CodeSystemEntityVersion> entityVersions = codeSystemEntityVersionService.query(params).getData();
+    Map<String, List<CodeSystemEntityVersion>> groupedVersions = entityVersions.stream().collect(Collectors.groupingBy(CodeSystemEntityVersion::getCode));
 
-      if (c.getDisplay() == null || c.getDisplay().getName() == null || CollectionUtils.isEmpty(c.getAdditionalDesignations())) {
-        List<Designation> csDesignations = conceptVersions.stream().flatMap(v -> v.getDesignations() == null ?
-            Stream.empty() : v.getDesignations().stream()).sorted(Comparator.comparing(d -> !d.isPreferred())).toList();
-        c.setDisplay(c.getDisplay() == null || c.getDisplay().getName() == null ? csDesignations.stream().findFirst().orElse(c.getDisplay()) : c.getDisplay());
-        c.setAdditionalDesignations(CollectionUtils.isEmpty(c.getAdditionalDesignations()) ? csDesignations : c.getAdditionalDesignations());
-      }
-    });
-    return concepts;
+    return groupedConcepts.keySet().stream().map(code -> groupedConcepts.get(code).stream()
+            .filter(ValueSetVersionConcept::isEnumerated).findFirst()
+            .orElse(groupedConcepts.get(code).stream().findFirst().orElse(null)))
+        .filter(Objects::nonNull)
+        .peek(c -> {
+          List<CodeSystemEntityVersion> versions = Optional.ofNullable(groupedVersions.get(c.getConcept().getCode())).orElse(new ArrayList<>());
+
+          List<String> preferredLanguages = versions.stream().flatMap(v -> v.getVersions().stream().map(CodeSystemVersionReference::getPreferredLanguage)).toList();
+
+          List<Designation> designations = versions.stream()
+              .filter(v -> CollectionUtils.isNotEmpty(v.getDesignations()))
+              .flatMap(v -> v.getDesignations().stream()).toList();
+          if (c.getDisplay() == null || c.getDisplay().getName() == null) {
+            List<Designation> displays = designations.stream().filter(d -> DISPLAY.equals(d.getDesignationType())).toList();
+            c.setDisplay(displays.stream()
+                .filter(d -> StringUtils.isNotEmpty(preferredLanguage) && d.getLanguage() != null && d.getLanguage().equals(preferredLanguage))
+                .findFirst().orElse(displays.stream()
+                    .filter(d -> StringUtils.isNotEmpty(preferredLanguage) && d.getLanguage() != null && d.getLanguage().startsWith(preferredLanguage))
+                    .findFirst().orElse(displays.stream()
+                        .filter(d -> CollectionUtils.isEmpty(preferredLanguages) || d.getLanguage() != null && preferredLanguages.stream().anyMatch(pl -> d.getLanguage().equals(pl)))
+                        .findFirst().orElse(displays.stream()
+                            .filter(d -> CollectionUtils.isEmpty(preferredLanguages) || d.getLanguage() != null && preferredLanguages.stream().anyMatch(pl -> d.getLanguage().startsWith(pl)))
+                            .findFirst().orElse(null)))));
+          }
+          if (CollectionUtils.isEmpty(c.getAdditionalDesignations())) {
+            c.setAdditionalDesignations(designations.stream()
+                .filter(d -> CollectionUtils.isEmpty(supportedLanguages) || supportedLanguages.contains(d.getLanguage()))
+                .filter(d -> c.getDisplay() == null || !d.getId().equals(c.getDisplay().getId())).toList());
+          }
+          c.setActive(versions.stream().anyMatch(v -> PublicationStatus.active.equals(v.getStatus())));
+          c.setAssociations(versions.stream().filter(v -> CollectionUtils.isNotEmpty(v.getAssociations())).flatMap(v -> v.getAssociations().stream())
+              .collect(Collectors.toList()));
+          c.setPropertyValues(versions.stream().filter(v -> CollectionUtils.isNotEmpty(v.getPropertyValues())).flatMap(v -> v.getPropertyValues().stream())
+              .collect(Collectors.toList()));
+        }).collect(Collectors.toList());
+  }
+
+  private ValueSetVersion getVersion(String vs, String vsVersion) {
+    if (vs == null) {
+      return null;
+    }
+    return Optional.ofNullable(vsVersion).map(v -> valueSetVersionRepository.load(vs, v)).orElse(valueSetVersionRepository.loadLastVersion(vs));
   }
 }
